# rust-52-projects

./: .gitignore  .travis.yml  CLAUDE.md  Cargo.toml  README.md  tilesplit_intro.md
.antigravitycli/: 1d19c347-75cc-4731-8fdf-d61e883b019d.json
.claude/: settings.local.json
.github/workflows/: ci.yml
adb-client/: Cargo.toml
adb-client/src/: client.rs  device.rs  error.rs  lib.rs  main.rs  protocol.rs  sync.rs
adb-client/tests/: integration.rs
async-job-queue/: Cargo.toml  Claude.md  README.md
async-job-queue/src/: job.rs  lib.rs  storage.rs  worker.rs
builder-derive/: Cargo.toml  Claude.md  README.md
builder-derive/examples/: basic_usage.rs  complex_types.rs  error_handling.rs  optional_fields.rs
builder-derive/src/: field.rs  generate.rs  lib.rs  parse.rs
builder-derive/tests/: integration_tests.rs
builder-derive/tests/compile_fail/: enum_not_supported.rs  enum_not_supported.stderr  tuple_struct_not_supported.rs  tuple_struct_not_supported.stderr  unit_struct_not_supported.rs  unit_struct_not_supported.stderr
calculator/: README.md
calculator/src/: main.rs
clog/: Cargo.toml  README.md
clog/src/: fuchsia.rs  main.rs
comic-viewer/: Cargo.toml
comic-viewer/src/: main.rs
count-words/: Cargo.toml
count-words/src/: main.rs
ebml/: Cargo.toml  README.md
ebml/src/: ebml.rs  lib.rs  matroska.rs
face-detect/: .gitignore  Cargo.toml  README.md
face-detect/opencv-rust-patch/binding-generator/src/settings/: func_exclude.rs
face-detect/opencv-rust-patch/src/: templ.rs
face-detect/opencv-rust-patch/src/manual/core/: mat.rs
face-detect/src/: main.rs
file-transfer/: Cargo.toml
file-transfer/src/: main.rs
file_transfer/: Cargo.toml
flashcard-app/: Cargo.toml
flashcard-app/data/: sample_decks.json
flashcard-app/src/: app.rs  card.rs  error.rs  lib.rs  main.rs  sample.rs  sm2.rs  storage.rs
flashcard-app/ui/: card_editor.slint  deck_list.slint  main.slint  stats.slint  study.slint  types.slint
game-server/: Cargo.toml  README.md
game-server/src/: game_client.html  main.rs
gpui-calculator/: Cargo.toml
gpui-calculator/src/: main.rs
guitar-fretboard/: Cargo.toml
guitar-fretboard/src/: main.rs
hyper-app/: Cargo.toml
hyper-app/src/: main.rs
iced-calculator/: Cargo.toml
iced-calculator/src/: main.rs
libavformat-ffi/: .gitignore  Cargo.toml  build.rs
libavformat-ffi/examples/: bindgen_example.rs  manual_example.rs  safe_example.rs
libavformat-ffi/src/: lib.rs
libavformat-ffi/src/bindgen/: mod.rs
libavformat-ffi/src/manual/: mod.rs  types.rs
libavformat-ffi/src/safe/: error.rs  format_context.rs  mod.rs  packet.rs
llm-gguf-parser/: Cargo.toml  README.md
llm-gguf-parser/src/: lib.rs  main.rs
llm-local-studio/: .gitignore  Cargo.toml
llm-local-studio-2/: Cargo.toml  out_stream.txt
llm-local-studio-2/docs/: phase-1-plan.md  phase-5-plan.md
llm-local-studio-2/src/: chat_template.rs  cli.rs  inference.rs
llm-local-studio-3/: .gitignore  Cargo.toml  build.rs  out_nonstream.txt
llm-local-studio-3/src/: engine_service.rs  hf.rs  inference.rs  main.rs  registry.rs
llm-local-studio-3/src/api/: assets.rs  mod.rs  routes.rs
llm-local-studio-3/ui/: index.html  package.json
llm-local-studio-3/ui/src/: main.js  main.ts  style.css
llm-local-studio-4/: Cargo.toml
llm-local-studio-4/.cargo/: config.toml
llm-local-studio-4/src/: chat_template.rs  cli.rs  engine_service.rs  inference.rs  main.rs  multilingual.rs  whisper_engine.rs
llm-local-studio-4/src/api/: mod.rs  routes.rs  types.rs
llm-local-studio-4/ui/: index.html  package-lock.json
llm-local-studio-4/ui/src/: main.ts  style.css
llm-local-studio/src/: cli.rs  inference.rs  main.rs
markdown-viewer/: Cargo.toml  README.md
markdown-viewer/src/: main.rs
media-metadata-explorer/: Cargo.toml
media-metadata-explorer/src/: main.rs
nes-apu/: Cargo.toml
nes-apu/demos/play/: main.rs
nes-apu/src/: apu.rs  composite_io.rs  dmc.rs  envelope.rs  frame_counter.rs  length_counter.rs  lib.rs  mixer.rs  noise.rs  pulse.rs  sweep.rs  system.rs  triangle.rs
nes-cpu/: Cargo.toml
nes-cpu/demos/snake/: main.rs
nes-cpu/src/: bus.rs  cpu.rs  ines.rs  lib.rs  main.rs  mapper.rs  opcodes.rs  state.rs
nes-emu/: Cargo.toml  README.md
nes-emu/assets/shaders/: crt.wgsl
nes-emu/schemas/: nes_state.fbs
nes-emu/src/: audio.rs  crt.rs  debug_ui.rs  emulation.rs  input.rs  main.rs  save_state.rs  video.rs
nes-joypad/: Cargo.toml
nes-joypad/demos/play/: main.rs
nes-joypad/src/: composite_io.rs  input.rs  joypad.rs  lib.rs  system.rs
nes-mapper/: Cargo.toml
nes-mapper/src/: axrom.rs  cnrom.rs  lib.rs  mmc1.rs  mmc3.rs  nrom.rs  uxrom.rs
nes-ppu/: Cargo.toml
nes-ppu/demos/render/: main.rs
nes-ppu/plans/: plan-1.md
nes-ppu/src/: bus_io.rs  lib.rs  main.rs  ppu.rs  system.rs
plum/: Cargo.toml  README.md
plum/src/: lib.rs
programming-wisdom/: Cargo.toml  README.md
programming-wisdom/src/: alexa.rs  main.rs
qrcode/: Cargo.toml
qrcode/src/: main.rs  qr.rs
rolldice/: Cargo.toml  README.md
rolldice/src/: lib.rs  main.rs
self-extracting/: Cargo.toml  README.md
self-extracting/src/: main.rs
shell/: Cargo.toml  README.md
shell/src/: main.rs
small-os/: Cargo.toml  x86_64-small_os.json
small-os/src/: main.rs  (+1 more)
socks5/: Cargo.toml
src/: main.rs
tftp/: Cargo.toml  README.md
tftp/src/: client.rs  main.rs  server.rs  tftp.rs
tilesplit/: Cargo.toml  README.md
tilesplit-wasm/: Cargo.toml  index.html
tilesplit-wasm/src/: lib.rs
tilesplit-wasm/www/: index.js  styles.css
tiny-llm-runner/: Cargo.toml  README.md
tiny-llm-runner/src/: config.rs  dequant.rs  lib.rs  main.rs  model.rs  ops.rs  runner.rs  sampler.rs  tensor.rs  tokenizer.rs
using-evcxr/: README.md  a-half-hour-to-learn-rust.ipynb
wasm-markdown-editor/: .gitignore  Cargo.toml  README.md  index.html
wasm-markdown-editor/src/: lib.rs  parser.rs  utils.rs
wasm-markdown-editor/tests/: web.rs
wasm-markdown-editor/www/: index.js  package.json  styles.css
web-server/: Cargo.toml  README.md
wgpu-game-of-life/: Cargo.toml  PLAN.md  index.html
(+24 files in other folders)
