[package]
name = "builder-derive"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Tsai <patrick@simplypatrick.com>"]
description = "A procedural macro for automatically deriving the Builder pattern"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
