[package]
name = "clog"
version = "0.1.0"
authors = ["Patrick Tsai <patrick@simplypatrick.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
colored = "2.0.0"
regex = "1.8.1"
lazy_static = "1.4.0"
anyhow = "1.0.70"
thiserror = "1.0.40"
