[package]
name = "game-server"
version = "0.1.0"
authors = ["Patrick Tsai <patrick@simplypatrick.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] } # Latest stable Tokio 1.x
futures-util = "0.3.30" # Added futures-util
tokio-tungstenite = "0.23.1" # Recent tokio-tungstenite
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
# Old 'websocket' and 'failure' crates removed.