[package]
name = "hyper-app"
version = "0.1.0"
authors = ["Patrick Tsai <patrick@simplypatrick.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.0", features = ["full"] } # Note: Major version change from 0.2 to 1.x, will require code changes
