[package]
name = "llm-local-studio"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
encoding_rs = "0.8"
llama-cpp-2 = { version = "0.1.146", features = ["sampler"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1"
