[package]
name = "media-metadata-explorer"
version = "0.1.0"
edition = "2021"
description = "Inspect multimedia metadata and directory-level summaries with libavformat"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
libavformat-ffi = { path = "../libavformat-ffi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
