[package]
name = "nes-cpu"
version = "0.1.0"
edition = "2021"
description = "NES 2A03 CPU emulator that passes nestest"

[features]
default = []
demos = ["iced", "rand"]

[[bin]]
name = "snake"
path = "demos/snake/main.rs"
required-features = ["demos"]

[dependencies]
anyhow = "1"
iced = { version = "0.14", features = ["canvas", "smol"], optional = true }
rand = { version = "0.8", optional = true }
