[package]
name = "nes-emu"
version = "0.1.0"
edition = "2021"
description = "NES emulator frontend using Bevy engine"

[dependencies]
nes-cpu = { path = "../nes-cpu" }
nes-ppu = { path = "../nes-ppu" }
nes-apu = { path = "../nes-apu" }
nes-joypad = { path = "../nes-joypad" }
nes-mapper = { path = "../nes-mapper" }
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_winit",
    "default_font",
    "x11",
] }
cpal = "0.15"
anyhow = "1"
