[package]
name = "nes-emu"
version = "0.1.0"
edition = "2021"
description = "NES emulator frontend using Bevy engine"

[dependencies]
nes-cpu = { path = "../nes-cpu" }
nes-ppu = { path = "../nes-ppu" }
nes-apu = { path = "../nes-apu" }
nes-joypad = { path = "../nes-joypad" }
nes-mapper = { path = "../nes-mapper" }
bevy = "0.15"
cpal = "0.15"
anyhow = "1"
