[package]
name = "nes-emu"
version = "0.1.0"
edition = "2021"
description = "NES emulator frontend using Bevy engine"

[dependencies]
nes-cpu = { path = "../nes-cpu" }
nes-ppu = { path = "../nes-ppu" }
nes-apu = { path = "../nes-apu" }
nes-joypad = { path = "../nes-joypad" }
nes-mapper = { path = "../nes-mapper" }
bevy = "0.18"
bevy_egui = "0.39"
cpal = "0.15"
image = "0.25"
anyhow = "1"
planus = "1.3"
egui_plot = "0.34"
