[package]
name = "programming-wisdom"
version = "0.1.0"
authors = ["Patrick Tsai <patrick@simplypatrick.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
simple-error = "0.2.1"
simple_logger = "1.6.0"
log = "0.4.8"
