[package]
name = "programming-wisdom"
version = "0.1.0"
authors = ["Patrick Tsai <patrick@simplypatrick.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.8.1"
serde = { version = "1.0.160", features = ["derive"] }
simple-error = "0.3.0"
simple_logger = "4.0.0"
log = "0.4.17"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["macros"] }
