[package]
name = "tiny-llm-runner"
version = "0.1.0"
edition = "2021"
description = "A pure-Rust llama-architecture inference runner over GGUF models"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
half = "2.4"
llm-gguf-parser = { path = "../llm-gguf-parser" }
memmap2 = "0.9"
rayon = "1.10"

[profile.release]
lto = "thin"
codegen-units = 1
